--- a/lectures/nonpar_regression/nonpar_regression2.tex
+++ b/lectures/nonpar_regression/nonpar_regression2.tex
@@ -460,9 +460,14 @@ So it lies outside the scope of usual kernel analysis. There is a lot more work
 building off of Silverman's initial work that connects smoothing splines to
 equivalent kernels. 
 
-[[ More to come ... sections below to be filled out ... ]]
+\section{Error analysis}
 
-\section{Smoothing spline analysis}
+Compared to the analysis for kNN and kernel smoothing, the error analysis for
+smoothing splines is a good deal more complex. Hence we'll dedicated an entire
+section to learning the tools behind it. The upshot is that we'll be able to use
+these tools to analyze a number of other estimators: 
+
+[[ More to come ... sections below to be filled out ... ]]
 
 \section{Multivariate splines}
 
