Copyedits for clarity

--- a/lectures/nonpar_regression/nonpar_regression1.tex
+++ b/lectures/nonpar_regression/nonpar_regression1.tex
@@ -572,7 +572,7 @@ the error rate of \smash{$n^{-2/(2+d)}$}, as claimed.
 
 To define and study higher-order smoothness classes, we'll need some more
 notation: given a multi-index $\alpha=(\alpha_1,\dots,\alpha_d) \in \Z^d_+$, we
-write $|\alpha| = \alpha_1 + \cdots \alpha_d$ and 
+write $|\alpha| = \alpha_1 + \cdots + \alpha_d$ and 
 \[
 D^\alpha f = \frac{\partial^{|\alpha|} f}{\partial x_1^{\alpha_1} \partial
   x_2^{\alpha_2} \dots \partial x_d^{\alpha_d}}.
