"What we cover" edits
- Overall, hedge a bit with the language, be less committal, since
  it is not clear how much time we will have to cover things

--- a/lectures/nonpar_regression/nonpar_regression1.tex
+++ b/lectures/nonpar_regression/nonpar_regression1.tex
@@ -150,28 +150,26 @@ negligible relative to the overall estimation error that we will encounter.
 
 \subsection{What we cover here}
 
-The goal is to expose you to a variety of methods over the next several lectures
-on nonparametric regression, and give you a flavor of some interesting results,
+The goal is to expose you to a variety of methods over our lectures on
+nonparametric regression, and give you a flavor of some interesting results, 
 under different assumptions. A few topics we will cover into more depth than
-others, but overall, this will be far from a complete treatement of
-nonparametric regression (that would take a whole course, or more).  
-
-Of the many texts you can consult for more details, proofs, etc., we highlight
-\citet{gyorfi2002distribution, wasserman2006all, tsybakov2009introduction} as
-general references on theory; \citet{hastie2009elements} as a general reference
-on methods; and \citet{vandegeer2000empirical, wainwright2019high} for analysis
-techniques and probabilistic tools.
+others. Of the many texts you can consult for more details, proofs, etc., we
+highlight \citet{gyorfi2002distribution, wasserman2006all,
+  tsybakov2009introduction} as general references on theory;
+\citet{hastie2009elements} as a general reference on methods; and
+\citet{vandegeer2000empirical, wainwright2019high} for analysis techniques and
+probabilistic tools. 
 
 Throughout, our discussion will bounce back and forth between the univariate
 case ($d=1$) and multivariate case ($d>1$). Some methods have obvious (natural) 
 multivariate extensions; some don't. Nevertheless, we can always use
 low-dimensional (even just univariate) nonparametric regression methods as
-building blocks for a high-dimensional nonparametric estimator. We'll study
-this later, when we talk about additive models.
+building blocks for a high-dimensional nonparametric estimator. We may study 
+this later, if and when we end up talking about additive models.
 
 Lastly, a lot of what we cover for nonparametric regression also carries over to
 nonparametric classification, which we'll cover (in much less detail) a bit
-later as well.
+later. 
 
 \section{Nearest neighbors methods}
 
