Remove some refs

--- a/lectures/nonpar_regression/nonpar_regression1.tex
+++ b/lectures/nonpar_regression/nonpar_regression1.tex
@@ -156,9 +156,7 @@ under different assumptions. A few topics we will cover into more depth than
 others. Of the many texts you can consult for more details, proofs, etc., we
 highlight \citet{gyorfi2002distribution, wasserman2006all,
   tsybakov2009introduction} as general references on theory;
-\citet{hastie2009elements} as a general reference on methods; and
-\citet{vandegeer2000empirical, wainwright2019high} for analysis techniques and
-probabilistic tools. 
+\citet{hastie2009elements} as a general reference on methods.
 
 Throughout, our discussion will bounce back and forth between the univariate
 case ($d=1$) and multivariate case ($d>1$). Some methods have obvious (natural) 
